prevent hyphenation of KNIME & Konstanz, plus…
…sort protected words

--- a/header.tex
+++ b/header.tex
@@ -50,21 +50,23 @@
 \widowpenalty=9999
 
 % prevent hyphenation; http://tex.stackexchange.com/a/48438
-\hyphenation{Achnanthidium}
-\hyphenation{minutissimum}
-\hyphenation{Pseudonitzschia}
-\hyphenation{multiseries}
-\hyphenation{Dyadobacter}
-\hyphenation{Bacteroidetes}
-\hyphenation{Cymbella}
-\hyphenation{microcephala}
-\hyphenation{prostrata}
 \hyphenation{Achnanthes}
-\hyphenation{longipes}
-\hyphenation{Elstera}
-\hyphenation{litoralis}
-\hyphenation{Fragilaria}
+\hyphenation{Achnanthidium}
+\hyphenation{ASSIST}
+\hyphenation{Bacteroidetes}
 \hyphenation{brevistriata}
 \hyphenation{Chapter}
+\hyphenation{Cymbella}
+\hyphenation{Dyadobacter}
+\hyphenation{Elstera}
+\hyphenation{Fragilaria}
+\hyphenation{Konstanz}
+\hyphenation{KNIME}
+\hyphenation{litoralis}
+\hyphenation{longipes}
+\hyphenation{microcephala}
+\hyphenation{minutissimum}
+\hyphenation{multiseries}
+\hyphenation{prostrata}
+\hyphenation{Pseudonitzschia}
 \hyphenation{Table}
-\hyphenation{ASSIST}
